--- a/src/style.css
+++ b/src/style.css
@@ -8,5 +8,5 @@
     font-size: 12px !important;
 }
 body {
-  font-family: 'Inter', sans-serif; /* Example: Adding a modern sans-serif font */
+  font-family: 'Poppins', sans-serif;
 }
